# Cold-Chain-Monitoring-Gateway

./: README.md
ColdChain_Gateway/ColdChain_Dashboard/Certificates/: Device Certificate.crt  Private Key.key  Public Key.key
ColdChain_Gateway/ColdChain_Master/: ColdChain_Master.ino
ColdChain_Gateway/ColdChain_Slave/: CMakeLists.txt
ColdChain_Gateway/ColdChain_Slave/include/: dht11_timer_isr.h  ui.h
ColdChain_Gateway/ColdChain_Slave/src/: dht11_timer_isr.c  led_control.c
ColdChain_Master/: ColdChain_Master.ino
ColdChain_Slave/: prj.conf
ColdChain_Slave/include/: ble_gatt.h  led_control.h
ColdChain_Slave/src/: ble_gatt.c  main.c  ui.c
